finally fix the header overlay triggering scrollbar

--- a/components/main_layout/header/index.styl
+++ b/components/main_layout/header/index.styl
@@ -84,8 +84,8 @@
 #main-layout-header-user-nav
   display none
   position absolute
-  top 0
-  right -2px
+  top 0px
+  right 0px
   border 3px solid black
   border-right 0 solid
   z-index 2
@@ -95,7 +95,7 @@
     text-align center
     width 100%
     border-top 1px solid light-gray-border-color
-    padding-right 22px
+    padding-right 20px
     border-right 0 solid
     &:first-child
       border-top 0 solid
